<resources>
  <string name="app_name">Quran Madani</string>
  <string name="downloadPrompt">Agar Quran Madani Android bisa berjalan lancar,
        kita perlu mengunduh beberapa berkas. Jika anda tidak melakukannya sekarang, aplikasi ini
        mungkin tidak akan bekerja dengan handal dan akan memerlukan sambungan Internet untuk membaca.
        Apakah anda bersedia mengunduh berkas yang diperlukan sekarang?
    </string>
  <string name="downloadTabletPrompt">Kami telah mempersiapkan gambar halaman Quran yang lebih baik untuk tablet
        . Apakah anda ingin mengunduh berkas-berkas tersebut sekarang?</string>
  <string name="downloadImportantPrompt">Ada pembaruan kecil namun penting bagi Quran yang anda miliki di perangkat ini.
        Apakah anda ingin mengunduh tambahan ini sekarang?
    </string>
  <string name="downloadPrompt_title">Unduh Berkas yang Diperlukan?</string>
  <string name="downloadPrompt_ok">Ya</string>
  <string name="downloadPrompt_no">Tidak</string>
  <string name="downloading_message">Harap tunggu berkas selesai diunduh (bisa dijeda).</string>
  <string name="extracting_title">Membongkar&#8230;</string>
  <string name="menu_about">Tentang Kami</string>
  <string name="menu_other_apps">Aplikasi lainnya</string>
  <string name="menu_settings">Setelan</string>
  <string name="menu_jump_last_page">Halaman terakhir</string>
  <string name="menu_bookmarks">Penanda</string>
  <string name="menu_bookmarks_page">Penanda Halaman</string>
  <string name="menu_bookmarks_ayah">Penanda Ayat</string>
  <string name="menu_sort">Sortir</string>
  <string name="menu_sort_date">Tanggal Dibuat</string>
  <string name="menu_sort_location">Lokasi dalam Quran</string>
  <string name="menu_sort_group_by_tags">Kelompokkan berdasar Label</string>
  <string name="menu_translation">Tampilkan Terjemahan</string>
  <string name="menu_show_recents" translatable="false">@string/recent_pages</string>
  <string name="menu_back_to_page">Tampilkan Quran</string>
  <string name="menu_help">Bantuan</string>
  <string name="menu_search">Pencarian</string>
  <string name="menu_get_translations">Dapatkan Terjemahan</string>
  <string name="menu_jump">Loncat</string>
  <string name="gotoPage">Pergi ke halaman</string>
  <string name="about_description">Versi Aplikasi 1.0.4</string>
  <string name="about_data_sources">Proyek Open Source</string>
  <string name="about_images">Quran Madani</string>
  <string name="about_madani_images">Quran Madani adalah aplikasi Al-Quran open source gratis untuk perangkat Android dengan kustomisasi dan dukungan bahasa Indonesia. Aplikasi ini dirancang tanpa penayangan iklan dan tanpa pelacakan Google sebagai upaya kami untuk melindungi informasi dan privasi Anda. Kami berharap dapat memudahkan setiap orang untuk membaca, mempelajari dan memahami makna Al-Quran yang mulia.</string>
  <string name="about_naskh_images">Gambar-gambar halaman Quran untuk jenis Naskh diperoleh (dengan izin) dari SHL Info Systems</string>
  <string name="about_qaloon_images">Gambar-gambar tipe Qaluun dipakai dengan izin dari Nous Memes Editions Et Diffusion (Tunisia)</string>
  <string name="about_quranicaudio_summary">Bacaan mp3 Quran tanpa jeda</string>
  <string name="about_quran_ksu">Proyek Mushaf Elektronik</string>
  <string name="about_madani_images_url" translatable="false">https://biwabits.com/quran-madani.html</string>
  <string name="about_quran_ksu_summary">Proyek Mushhaf Elektronik Universitas Raja Saud (Electronic Moshaf Project) adalah sumber Tafsir berbahasa Arab dan terjemahan untuk berbagai bahasa dari aplikasi ini</string>
  <string name="about_naskh_images_url" translatable="false">http://www.shlinfosystems.com</string>
  <string name="about_tanzil_summary">Terjemahan untuk banyak bahasa</string>
  <string name="about_quranicaudio" translatable="false">QuranicAudio</string>
  <string name="about_noorhidayat_summary">Font Noorehira dan Terjemahan Mufti Taqi</string>
  <string name="about_quranicaudio_url" translatable="false">https://quranicaudio.com</string>
  <string name="about_others">Lainnya</string>
  <string name="about_quran_ksu_url" translatable="false">https://quran.ksu.edu.sa</string>
  <string name="about_furqan" translatable="false">Al-Bāḥith al-Qur’ānī (tafsir.app)</string>
  <string name="about_contributors">Kontributor</string>
  <string name="about_furqan_url" translatable="false">https://tafsir.app</string>
  <string name="about_contributors_summary">Daftar orang yang berkontribusi pada pengembangan Quran untuk Android</string>
  <string name="about_noorhidayat_url" translatable="false">http://www.noorehidayat.org</string>
  <string name="about_quran_enc_url" translatable="false">https://quranenc.com</string>
  <string name="about_tanzil" translatable="false">Tanzil</string>
  <string name="about_tanzil_url" translatable="false">http://tanzil.net</string>
  <string name="about_noorhidayat" translatable="false">Noorhidayat</string>
  <string name="about_open_source">Proyek Open Source</string>
  <string name="about_androidx" translatable="false">AndroidX</string>
  <string name="about_androidx_url" translatable="false">https://developer.android.com/jetpack/androidx</string>
  <string name="about_dagger2" translatable="false">Dagger 2</string>
  <string name="about_dagger2_url" translatable="false">https://google.github.io/dagger</string>
  <string name="about_dnsjava" translatable="false">dnsjava</string>
  <string name="about_dnsjava_url" translatable="false">http://dnsjava.org</string>
  <string name="about_material_components" translatable="false">Material Components for Android</string>
  <string name="about_material_components_url" translatable="false">https://github.com/material-components/material-components-android</string>
  <string name="about_timber" translatable="false">Timber</string>
  <string name="about_timber_url" translatable="false">https://github.com/JakeWharton/timber</string>
  <string name="about_kotlin" translatable="false">Kotlin</string>
  <string name="about_kotlin_url" translatable="false">https://kotlinlang.org</string>
  <string name="about_numberPicker" translatable="false">Number Picker</string>
  <string name="about_numberPicker_url" translatable="false">https://github.com/ShawnLin013/NumberPicker</string>
  <string name="about_okhttp" translatable="false">OkHttp</string>
  <string name="about_okhttp_url" translatable="false">https://github.com/square/okhttp</string>
  <string name="about_rxjava" translatable="false">RxJava</string>
  <string name="about_rxjava_url" translatable="false">https://github.com/ReactiveX/RxJava</string>
  <string name="about_rxandroid" translatable="false">RxAndroid</string>
  <string name="about_rxandroid_url" translatable="false">https://github.com/ReactiveX/RxAndroid</string>
  <string name="about_moshi" translatable="false">Moshi</string>
  <string name="about_moshi_url" translatable="false">https://github.com/square/moshi</string>
  <string name="about_sliding_panel" translatable="false">AndroidSlidingUpPanel</string>
  <string name="about_sliding_panel_url" translatable="false">https://github.com/umano/AndroidSlidingUpPanel</string>
  <string name="about_contributors_url" translatable="false">https://github.com/quran/quran_android/blob/master/CONTRIBUTORS.md</string>
  <string name="help_title">Pertanyaan yang Sering Diajukan</string>
  <string name="help">
        &lt;b>Bagaimana cara memainkan audio?&lt;/b>
        &lt;br/>Buka halaman Quran mana saja. Sentuh layar sekali. Di bagian bawah, anda akan lihat
        tombol putar dan teks dengan nama seorang qari. Klik nama qari untuk memilih qari laiinya.
        Klik tombol putar untuk mengunduh audio dan mendengarkan bacaan halaman atau surat yang terbuka.
        &lt;br/>
        &lt;br/>&lt;b>Bagaimana menampilkan terjemahan?&lt;/b>
        &lt;br/>Buka halaman Quran mana saja. Sentuh layar sekali. Di bagian atas, anda akan melihat
        lambang bumi (atau, jika tak ada, klik pada lambang kotak dengan 3 titik) - klik ikon itu dan pilih
        terjemahan yang ingin dilihat atau pilih (Indonesian Translation) untuk terjemahan Bahasa Indonesia.
        &lt;br/>
        Jika anda belum memiliki terjemahan yang telah diunduh, ia akan membawa
        anda ke layar baru di mana anda bisa mengunduh terjemahan. Pilih dan unduh sebuah terjemahan,
        kemudian balik ke tampilan sebelumnya dan sentuh gambar bumi untuk memilih terjemahan.
        &lt;br/>
        &lt;br/>&lt;b>Bagaimana saya menandai sebuah halaman?&lt;/b>
        &lt;br/>Buka halaman Quran mana saja. Sentuh layar sekali. Pada pojok kanan atas, anda akan melihat sebuah
        ikon penanda halaman buku. Sentuh gambar penanda buku untuk menandai halaman tersebut (warna ikon akan berubah menjadi putih penuh).
        Sentuh ikon penanda buku lagi untuk membuang penanda tersebut.
        &lt;br/>
        &lt;br/>&lt;b>Bagaimana memperbesar ukuran teks?&lt;/b>
        &lt;br/>Untuk halaman berbahasa Arab, putar perangkat ke posisi mendatar. Ini akan membuat teks lebih besar.
        Untuk terjemahan, pergi ke setelan dan tetapkan ukuran teks terjemahan.
        &lt;br/>
        &lt;br/>&lt;b>Bagaimana cara membagikan sebuah ayat?&lt;/b>
        &lt;br/>Saat membuka halaman Quran, tekan dan tahan pada ayat yang diinginkan untuk memunculkan menu yang memberi
        pilihan untuk menandai, melabeli, membagi, menyalinnya ke papan klip, melihat terjemahannya, atau mendengarkan bacaannya.&lt;br/>

    </string>
  <string name="search_hint">Telusuri al Quran</string>
  <string name="quranSearchType">Ayat-ayat al Quran</string>
  <plurals name="search_results">
    <item quantity="other">%2$d hasil pencarian untuk \"%1$s\": </item>
  </plurals>
  <string name="storage_permission_rationale">Quran meminta izin anda untuk menyimpan datanya pada
        penyimpanan eksternal. Quran tetap akan bekerja tanpa izin ini, tetapi jika anda membersihkan data atau
        membuang aplikasi, semua halaman, audio, dan data yang telah diunduh juga akan hilang. Berikan
        Quran izin?</string>
  <string name="storage_permission_please_restart">Harap hidupkan ulang aplikasi ini agar penyimpanan data bisa dilakukan.</string>
  <string name="found_in_sura">Ditemukan dalam Surat %1$s: %2$d (Halaman %3$d)</string>
  <string name="no_results">Tak ada hasil pencarian untuk \"%s\"</string>
  <string name="no_arabic_search_available">Anda belum mengunduh paket pencarian bahasa Arab. Harap unduh dulu dan ulangi pencarian anda.</string>
  <string name="get_arabic_search_db">Dapatkan Basis Data Pencarian Bahasa Arab</string>
  <string name="prefs_volume_key_navigation_title">Navigasi tombol suara</string>
  <string name="prefs_volume_key_navigation_summary">Navigasi antar halaman menggunakan tombol suara</string>
  <string name="prefs_category_reading">Setelan Pembacaan</string>
  <string name="prefs_category_translation">Setelan Terjemahan</string>
  <string name="prefs_category_display_settings">Setelan Tampilan</string>
  <string name="prefs_use_arabic_title">Mode bahasa Arab (الوضع العربي)</string>
  <string name="prefs_use_arabic_summary_on">Menggunakan bahasa Arab untuk antarmuka aplikasi</string>
  <string name="prefs_new_background_title">Latar baru</string>
  <string name="prefs_lock_orientation_title">Kunci orientasi layar</string>
  <string name="prefs_lock_orientation_summary_on">Menggunakan mode tampilan tetap</string>
  <string name="prefs_lock_orientation_summary_off">Mengikuti orientasi perangkat</string>
  <string name="prefs_landscape_orientation_title">Orientasi mendatar</string>
  <string name="prefs_landscape_orientation_summary_on">Selalu gunakan mode mendatar</string>
  <string name="prefs_landscape_orientation_summary_off">Selalu gunakan mode tegak</string>
  <string name="prefs_night_mode_title">Mode malam</string>
  <string name="prefs_night_mode_summary">Menggunkan latar gelap dan tulisan terang</string>
</resources>